:lipstick: Style: adjusting the dark colors

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Plaid Tie
 Theme URI: https://github.com/plaidtie/plaidtie-wp-theme.git
-Author: the WordPress team
+Author: the Pliad Tie team
 Author URI: http://plaidtie.net/
 Description: Plaid Tie is built on the base of Twenty-seventeen.
 Version: 1.0
